# advent-of-code

./: Cargo.toml  LICENSE  init_day.sh  rustfmt.toml
.zed/: settings.json
aoc-2022/: Cargo.toml
aoc-2022/src/: lib.rs
aoc-2022/src/day1/: mod.rs
aoc-2022/src/day10/: data.rs  mod.rs
aoc-2022/src/day11/: parser.rs
aoc-2022/src/day11/data/: actions.rs  processors.rs
aoc-2022/src/day12/: mod.rs
aoc-2022/src/day13/: mod.rs
aoc-2022/src/day14/: mod.rs
aoc-2022/src/day15/: mod.rs
aoc-2022/src/day17/: mod.rs
aoc-2022/src/day18/: mod.rs
aoc-2022/src/day19/: mod.rs
aoc-2022/src/day2/: data.rs  mod.rs
aoc-2022/src/day20/: mod.rs
aoc-2022/src/day21/: mod.rs
aoc-2022/src/day22/: cube.rs  data.rs  mod.rs
aoc-2022/src/day23/: mod.rs
aoc-2022/src/day24/: mod.rs
aoc-2022/src/day25/: mod.rs
aoc-2022/src/day3/: mod.rs
aoc-2022/src/day4/: mod.rs
aoc-2022/src/day5/: errors.rs  mod.rs  parser.rs
aoc-2022/src/day6/: mod.rs
aoc-2022/src/day7/: data.rs  mod.rs  parser.rs
aoc-2022/src/day8/: mod.rs
aoc-2022/src/day9/: mod.rs
aoc-2023/: Cargo.toml
aoc-2023/src/day1/: mod.rs
aoc-2023/src/day10/: mod.rs
aoc-2023/src/day11/: mod.rs
aoc-2023/src/day12/: mod.rs
aoc-2023/src/day13/: mod.rs
aoc-2023/src/day14/: mod.rs
aoc-2023/src/day15/: mod.rs
aoc-2023/src/day16/: mod.rs
aoc-2023/src/day17/: mod.rs
aoc-2023/src/day18/: mod.rs
aoc-2023/src/day19/: mod.rs
aoc-2023/src/day2/: mod.rs
aoc-2023/src/day20/: mod.rs
aoc-2023/src/day21/: mod.rs
aoc-2023/src/day22/: mod.rs
aoc-2023/src/day23/: mod.rs
aoc-2023/src/day24/: mod.rs
aoc-2023/src/day25/: mod.rs
aoc-2023/src/day3/: mod.rs
aoc-2023/src/day4/: mod.rs
aoc-2023/src/day5/: mod.rs
aoc-2023/src/day6/: mod.rs
aoc-2023/src/day7/: mod.rs
aoc-2023/src/day8/: mod.rs
aoc-2023/src/day9/: mod.rs
aoc-2024/: Cargo.toml
aoc-2024/src/: lib.rs
aoc-2024/src/day1/: mod.rs
aoc-2024/src/day10/: mod.rs
aoc-2024/src/day11/: mod.rs
aoc-2024/src/day12/: mod.rs
aoc-2024/src/day13/: mod.rs
aoc-2024/src/day14/: mod.rs
aoc-2024/src/day15/: mod.rs
aoc-2024/src/day16/: mod.rs
aoc-2024/src/day17/: mod.rs
aoc-2024/src/day18/: mod.rs
aoc-2024/src/day19/: mod.rs
aoc-2024/src/day2/: mod.rs
aoc-2024/src/day20/: mod.rs
aoc-2024/src/day21/: mod.rs  model.rs
aoc-2024/src/day22/: mod.rs
aoc-2024/src/day23/: mod.rs
aoc-2024/src/day24/: mod.rs
aoc-2024/src/day25/: mod.rs
aoc-2024/src/day3/: mod.rs
aoc-2024/src/day4/: mod.rs
aoc-2024/src/day5/: mod.rs
aoc-2024/src/day6/: data.rs  mod.rs
aoc-2024/src/day7/: mod.rs
aoc-2024/src/day8/: mod.rs
aoc-2024/src/day9/: mod.rs
aoc-2025/: Cargo.toml
aoc-2025/src/day1/: mod.rs
aoc-2025/src/day10/: mod.rs
aoc-2025/src/day11/: mod.rs
aoc-2025/src/day12/: mod.rs
aoc-2025/src/day2/: mod.rs
aoc-2025/src/day3/: mod.rs
aoc-2025/src/day4/: mod.rs
aoc-2025/src/day5/: mod.rs
aoc-2025/src/day6/: mod.rs
aoc-2025/src/day7/: mod.rs
aoc-2025/src/day8/: mod.rs
aoc-2025/src/day9/: mod.rs
aoc-common/: Cargo.toml
aoc-common/src/: lib.rs
aoc-common/src/input/: mod.rs
aoc-common/src/util/: array_stack.rs  bisect.rs  bitset.rs  mod.rs  number_range.rs  vecmatrix.rs
aoc-common/src/util/iter/: end_on_err.rs  groups.rs  mod.rs  recursive.rs  windows_cycle.rs
aoc-common/src/util/lexer/: errors.rs  mod.rs
src/: lib.rs  main.rs
src/day1/: mod.rs
src/day10/: data.rs  mod.rs
src/day11/: mod.rs  parser.rs
src/day11/data/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day17/: mod.rs
src/day18/: mod.rs
src/day19/: mod.rs
src/day2/: data.rs  mod.rs
src/day20/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: errors.rs  mod.rs  parser.rs
src/day6/: mod.rs
src/day7/: data.rs  mod.rs  parser.rs
src/day8/: mod.rs
src/day9/: mod.rs
src/input/: mod.rs
src/util/: array_stack.rs  bitset.rs  mod.rs  number_range.rs  vecmatrix.rs
src/util/iter/: end_on_err.rs  mod.rs
src/util/lexer/: errors.rs  mod.rs
