[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-common = { path = "../aoc-common" }

[[bin]]
name = "aoc-2022-day1"
path = "bin/day1.rs"

[[bin]]
name = "aoc-2022-day2"
path = "bin/day2.rs"

[[bin]]
name = "aoc-2022-day3"
path = "bin/day3.rs"

[[bin]]
name = "aoc-2022-day4"
path = "bin/day4.rs"

[[bin]]
name = "aoc-2022-day5"
path = "bin/day5.rs"

[[bin]]
name = "aoc-2022-day6"
path = "bin/day6.rs"

[[bin]]
name = "aoc-2022-day7"
path = "bin/day7.rs"

[[bin]]
name = "aoc-2022-day8"
path = "bin/day8.rs"

[[bin]]
name = "aoc-2022-day9"
path = "bin/day9.rs"

[[bin]]
name = "aoc-2022-day10"
path = "bin/day10.rs"

[[bin]]
name = "aoc-2022-day12"
path = "bin/day12.rs"

[[bin]]
name = "aoc-2022-day13"
path = "bin/day13.rs"

[[bin]]
name = "aoc-2022-day14"
path = "bin/day14.rs"

[[bin]]
name = "aoc-2022-day15"
path = "bin/day15.rs"

[[bin]]
name = "aoc-2022-day17"
path = "bin/day17.rs"

[[bin]]
name = "aoc-2022-day18"
path = "bin/day18.rs"

[[bin]]
name = "aoc-2022-day19"
path = "bin/day19.rs"

[[bin]]
name = "aoc-2022-day20"
path = "bin/day20.rs"

[[bin]]
name = "aoc-2022-day21"
path = "bin/day21.rs"

[[bin]]
name = "aoc-2022-day22"
path = "bin/day22.rs"

[[bin]]
name = "aoc-2022-day23"
path = "bin/day23.rs"

[[bin]]
name = "aoc-2022-day24"
path = "bin/day24.rs"

[[bin]]
name = "aoc-2022-day25"
path = "bin/day25.rs"
