[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-common = { path = "../aoc-common" }

[[bin]]
name = "day1"
path = "bin/day1.rs"

[[bin]]
name = "day2"
path = "bin/day2.rs"

[[bin]]
name = "day3"
path = "bin/day3.rs"

[[bin]]
name = "day4"
path = "bin/day4.rs"

[[bin]]
name = "day5"
path = "bin/day5.rs"

[[bin]]
name = "day6"
path = "bin/day6.rs"
