[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-common = { path = "../aoc-common" }

[[bin]]
name = "day1"
path = "bin/day1.rs"

[[bin]]
name = "day2"
path = "bin/day2.rs"

[[bin]]
name = "day3"
path = "bin/day3.rs"

[[bin]]
name = "day4"
path = "bin/day4.rs"

[[bin]]
name = "day5"
path = "bin/day5.rs"

[[bin]]
name = "day6"
path = "bin/day6.rs"

[[bin]]
name = "day7"
path = "bin/day7.rs"

[[bin]]
name = "day8"
path = "bin/day8.rs"

[[bin]]
name = "day9"
path = "bin/day9.rs"

[[bin]]
name = "day10"
path = "bin/day10.rs"

[[bin]]
name = "day11"
path = "bin/day11.rs"

[[bin]]
name = "day12"
path = "bin/day12.rs"

[[bin]]
name = "day13"
path = "bin/day13.rs"

[[bin]]
name = "day14"
path = "bin/day14.rs"

[[bin]]
name = "day15"
path = "bin/day15.rs"
