[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-common = { path = "../aoc-common" }

[[bin]]
name = "aoc-2025-day1"
path = "bin/day1.rs"

[[bin]]
name = "aoc-2025-day2"
path = "bin/day2.rs"

[[bin]]
name = "aoc-2025-day3"
path = "bin/day3.rs"

[[bin]]
name = "aoc-2025-day4"
path = "bin/day4.rs"
